syntax = "proto3";

package empresas;

service EmpresasService {
  rpc CreateEmpresa (CreateEmpresaRequest) returns (Empresa) {}
  rpc GetEmpresa (GetEmpresaRequest) returns (Empresa) {}
  rpc ListEmpresas (ListEmpresasRequest) returns (ListEmpresasResponse) {}
  rpc UpdateEmpresa (UpdateEmpresaRequest) returns (Empresa) {}
  rpc DeleteEmpresa (DeleteEmpresaRequest) returns (DeleteEmpresaResponse) {}
}

message Empresa {
  int32 empresa_id = 1;
  string razonSocial = 2;
  string ruc = 3;
  string direccion = 4;
  string telefono = 5;
  string correo = 6;
  string logoUrl = 7;
  bool esActiva = 8;
  string created_at = 9;
  string updated_at = 10;
  string nombreComercial = 11;
}

message CreateEmpresaRequest {
  string razonSocial = 1;
  string ruc = 2;
  string direccion = 3;
  string telefono = 4;
  string correo = 5;
  string logoUrl = 6;
  bool esActiva = 7;
  string nombreComercial = 8;
}

message GetEmpresaRequest {
  int32 empresaId = 1;
}
message ListEmpresasRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message ListEmpresasResponse {
  repeated Empresa empresas = 1;
  int32 total = 2;
}

message UpdateEmpresaRequest {
  int32 empresaId = 1;
  string razonSocial = 2;
  string ruc = 3;
  string direccion = 4;
  string telefono = 5;
  string correo = 6;
  string logoUrl = 7;
  bool esActiva = 8;
  string nombreComercial = 9;
}

message DeleteEmpresaRequest {
  int32 empresaId = 1;
}

message DeleteEmpresaResponse {
  bool success = 1;
}